fix(table): add scrollBar (#1860)

--- a/src/table/style/index.less
+++ b/src/table/style/index.less
@@ -25,7 +25,8 @@
     }
   }
 
-  &-body {
+  &-body,
+  &-content {
     .scrollbar();
   }
 
